--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Title + Favicon -->
     <title>Blog</title>
-    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="/src/images/shev-shelio.png" type="image/x-icon">
 
 </head>
 
@@ -33,9 +33,10 @@
                         alt="Icono del blog"></a></li>
 
             <li><a href="#" class="hyperlink-list-header" target="_blank">Diseño</a></li>
-            <li><a href="#" class="hyperlink-list-header" target="_blank">SEO</a></li>
+            <li><a href="#" class="hyperlink-list-header" target="_blank">UI/UX</a></li>
         </ul>
     </nav>
+
     <header class="header">
         <h1 class="primary-title">
             <span class="span-title">W</span><span class="span-title">e</span><span class="span-title">b</span><span class="span-title">D</span><span class="span-title">e</span><span class="span-title">s</span><span class="span-title">i</span><span class="span-title">g</span><span class="span-title">n</span><span class="span-title">e</span><span class="span-title">r</span>
@@ -186,9 +187,9 @@
                             <span class="tag">UI/UX</span>
                         </div>
                     </header>
-                    <div class="paragraphs">
+                    <div class="paragraphs paragraphs-with-scroll">
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
-                        <!-- <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non, mollitia exercitationem delectus recusandae in quisquam eligendi ratione, necessitatibus dolorem deserunt iure neque atque porro ab! Voluptatum esse veritatis autem.</p> -->
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non, mollitia exercitationem delectus recusandae in quisquam eligendi ratione, necessitatibus dolorem deserunt iure neque atque porro ab! Voluptatum esse veritatis autem.</p>
                     </div>
                 </div>
                 <footer class="footer-content">
@@ -201,14 +202,18 @@
             <div class="container-information">
                 <div class="information">
                     <header>
-                        <h2 class="title-text">¿Cómo hacer un portfolio de UX/UI Designer?</h2>
+                        <h2 class="title-text">
+                            <a href="#" class="title-text">¿Cómo hacer un portfolio de UX/UI Designer?
+                            </a>
+                        </h2>
                         <div class="tags">
                             <span class="tag">Portfolio</span>
                             <span class="tag">UI/UX</span>
                         </div>
                     </header>
-                    <div class="paragraphs">
-                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit.!</p>
+                    <div class="paragraphs paragraphs-with-scroll">
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non, mollitia exercitationem delectus recusandae in quisquam eligendi ratione, necessitatibus dolorem deserunt iure neque atque porro ab! Voluptatum esse veritatis autem.</p>
                     </div>
                 </div>
                 <footer class="footer-content">
@@ -221,14 +226,17 @@
             <div class="container-information">
                 <div class="information">
                     <header>
-                        <h2 class="title-text">Los 12 secretos del UX/UI Design</h2>
+                        <h2 class="title-text">
+                            <a href="#" class="title-text">Los 12 secretos del UX/UI Design</a>
+                        </h2>
                         <div class="tags">
                             <span class="tag">Diseño</span>
                             <span class="tag">UI/UX</span>
                         </div>
                     </header>
-                    <div class="paragraphs">
+                    <div class="paragraphs paragraphs-with-scroll">
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non, mollitia exercitationem delectus recusandae in quisquam eligendi ratione, necessitatibus dolorem deserunt iure neque atque porro ab! Voluptatum esse veritatis autem.</p>
                     </div>
                 </div>
                 <footer class="footer-content">
@@ -241,14 +249,17 @@
             <div class="container-information">
                 <div class="information">
                     <header>
-                        <h2 class="title-text">Webpack para optimizar tus proyectos</h2>
+                        <h2 class="title-text">
+                            <a href="#" class="title-text">Webpack para optimizar tus proyectos</a>
+                        </h2>
                         <div class="tags">
                             <span class="tag">Web</span>
                             <span class="tag">Proyectos</span>
                         </div>
                     </header>
-                    <div class="paragraphs">
+                    <div class="paragraphs paragraphs-with-scroll">
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non, mollitia exercitationem delectus recusandae in quisquam eligendi ratione, necessitatibus dolorem deserunt iure neque atque porro ab! Voluptatum esse veritatis autem.</p>
                     </div>
                 </div>
                 <footer class="footer-content">
@@ -261,14 +272,17 @@
             <div class="container-information">
                 <div class="information">
                     <header>
-                        <h2 class="title-text">CSS3: Variables</h2>
+                        <h2 class="title-text">
+                            <a href="#" class="title-text">CSS3: Variables</a>
+                        </h2>
                         <div class="tags">
                             <span class="tag">CSS3</span>
                             <span class="tag">Tricks</span>
                         </div>
                     </header>
-                    <div class="paragraphs">
+                    <div class="paragraphs paragraphs-with-scroll">
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non, mollitia exercitationem delectus recusandae in quisquam eligendi ratione, necessitatibus dolorem deserunt iure neque atque porro ab! Voluptatum esse veritatis autem.</p>
                     </div>
                 </div>
                 <footer class="footer-content">
@@ -281,14 +295,17 @@
             <div class="container-information">
                 <div class="information">
                     <header>
-                        <h2 class="title-text">Lodash: Biblioteca de JavaScript</h2>
+                        <h2 class="title-text">
+                            <a href="#" class="title-text">Lodash: Biblioteca de JavaScript</a>
+                        </h2>
                         <div class="tags">
                             <span class="tag">Biblioteca</span>
                             <span class="tag">ECMAScript</span>
                         </div>
                     </header>
-                    <div class="paragraphs">
+                    <div class="paragraphs paragraphs-with-scroll">
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non, mollitia exercitationem delectus recusandae in quisquam eligendi ratione, necessitatibus dolorem deserunt iure neque atque porro ab! Voluptatum esse veritatis autem.</p>
                     </div>
                 </div>
                 <footer class="footer-content">
@@ -301,34 +318,17 @@
             <div class="container-information">
                 <div class="information">
                     <header>
-                        <h2 class="title-text">GRID: Realmente no lo entiendo</h2>
+                        <h2 class="title-text">
+                            <a href="#" class="title-text">GRID: Realmente no lo entiendo</a>
+                        </h2>
                         <div class="tags">
                             <span class="tag">CSS3</span>
                             <span class="tag">GRID</span>
                         </div>
                     </header>
-                    <section class="paragraphs">
+                    <div class="paragraphs paragraphs-with-scroll">
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
-                    </section>
-                </div>
-                <footer class="footer-content">
-                    <span>By <a href="#" class="author">Autor</a></span>
-                </footer>
-            </div>
-        </article>
-        <article class="item border-gradient-secondary">
-            <img src="src/images/secondary-header.img.png" alt="" class="image">
-            <div class="container-information">
-                <div class="information">
-                    <header>
-                        <h2 class="title-text">Amigos, no sé qué otro título poner</h2>
-                        <div class="tags">
-                            <span class="tag">Help</span>
-                            <span class="tag">Me!</span>
-                        </div>
-                    </header>
-                    <div class="paragraphs">
-                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non, mollitia exercitationem delectus recusandae in quisquam eligendi ratione, necessitatibus dolorem deserunt iure neque atque porro ab! Voluptatum esse veritatis autem.</p>
                     </div>
                 </div>
                 <footer class="footer-content">
@@ -341,14 +341,40 @@
             <div class="container-information">
                 <div class="information">
                     <header>
-                        <h2 class="title-text">Corto</h2>
+                        <h2 class="title-text">
+                            <a href="#" class="title-text">Amigos, no sé qué otro título poner</a>
+                        </h2>
+                        <div class="tags">
+                            <span class="tag">Help</span>
+                            <span class="tag">Me!</span>
+                        </div>
+                    </header>
+                    <div class="paragraphs paragraphs-with-scroll">
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non, mollitia exercitationem delectus recusandae in quisquam eligendi ratione, necessitatibus dolorem deserunt iure neque atque porro ab! Voluptatum esse veritatis autem.</p>
+                    </div>
+                </div>
+                <footer class="footer-content">
+                    <span>By <a href="#" class="author">Autor</a></span>
+                </footer>
+            </div>
+        </article>
+        <article class="item border-gradient-secondary">
+            <img src="src/images/secondary-header.img.png" alt="" class="image">
+            <div class="container-information">
+                <div class="information">
+                    <header>
+                        <h2 class="title-text">
+                            <a href="#" class="title-text">Corto</a>
+                        </h2>
                         <div class="tags">
                             <span class="tag">[ESTO]</span>
                             <span class="tag">[OTRO]</span>
                         </div>
                     </header>
-                    <div class="paragraphs">
+                    <div class="paragraphs paragraphs-with-scroll">
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non, mollitia exercitationem delectus recusandae in quisquam eligendi ratione, necessitatibus dolorem deserunt iure neque atque porro ab! Voluptatum esse veritatis autem.</p>
                     </div>
                 </div>
                 <footer class="footer-content">
@@ -389,6 +415,7 @@
                     </header>
                     <section class="tags">
                         <span class="tag">Prolog</span>
+                        <span class="tag">Assembler</span>
                     </section>
                 </article>
             </section>
