--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 <body>
 
     <nav class="nav">
-        <ul class="list-header">
-            <li><a href="#" class="hyperlink-list-header" target="_blank">Programación</a></li>
-            <li><a href="#" class="hyperlink-list-header" target="_blank">Tips</a></li>
+        <ul class="list-nav">
+            <li><a href="#" class="hyperlink-list-nav" target="_blank">Programación</a></li>
+            <li><a href="#" class="hyperlink-list-nav" target="_blank">Tips</a></li>
 
             <li><a href="#" target="_blank"><img src="src/images/shev-shelio.png" class="icon-header"
                         alt="Icono del blog"></a></li>
 
-            <li><a href="#" class="hyperlink-list-header" target="_blank">Diseño</a></li>
-            <li><a href="#" class="hyperlink-list-header" target="_blank">UI/UX</a></li>
+            <li><a href="#" class="hyperlink-list-nav" target="_blank">Diseño</a></li>
+            <li><a href="#" class="hyperlink-list-nav" target="_blank">UI/UX</a></li>
         </ul>
     </nav>
 
